added grunt task to minify TimeOnSiteTracker file

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset='UTF-8'>
-<title>Title of the document</title>
+<title>Test Node application - TimeOnSiteTracker</title>
 </head>
 
 <body>
-Content of the document......
+TimeOnSiteTracker loaded!
 <br/>
 <a target ='_blank' href='http://www.example.com'>EXAMPLE</a>
 <br/>
@@ -16,11 +16,8 @@ Content of the document......
 <a href='index.html#abcIndio'>anchor tag with # change</a>
 
 
-<script src="js/TimeOnSiteTracker.js"></script>
-
-<!-- <script src="../test/testy.js"></script> -->
-
-<!-- <script src="tosLocal.js"></script> -->
+<!-- <script src="js/TimeOnSiteTracker.js"></script> -->
+<script src="js/TimeOnSiteTracker.min.js"></script>
 
 </body>
 
