added URL change detection for old browsers

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -17,7 +17,7 @@ TimeOnSiteTracker loaded!
 
 
 <!-- <script src="js/TimeOnSiteTracker.js"></script> -->
-<script src="js/TimeOnSiteTracker.min.js"></script>
+<script src="js/TimeOnSiteTracker.js"></script>
 
 </body>
 
