Payment buttons tested

--- a/index.html
+++ b/index.html
@@ -502,6 +502,18 @@ var Tos = new TimeOnSiteTracker(config);
             <li>If any of these conditions is violated, it will block user from closing the page or slow down UI drastically. On the contrary, these rules are not applicable when using local storage because that is not real-time</li>
         </ul>
     </p>
+
+    <p>
+        <!-- <a href="https://www.paypal.me/saleemkce/10" class="user-mention">Send $10</a>
+        <a href="https://www.paypal.me/saleemkce/20" class="user-mention">Send $20</a>
+
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+            <input type="hidden" name="cmd" value="_s-xclick">
+            <input type="hidden" name="hosted_button_id" value="WRW8PYL2X4L2Q">
+            <input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_paynowCC_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!">
+            <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
+            </form> -->
+    </p>
 </p>
 
 <!--
