Added TOS script to track blog access

--- a/v1/backend.html
+++ b/v1/backend.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>TimeonsiteTracker by saleemkce</title>
+    <title>TimeonsiteTracker (TOS) || Saving TOS to database</title>
 
     <link rel="stylesheet" href="../stylesheets/styles.css">
     <link rel="stylesheet" href="../stylesheets/github-light.css">
@@ -11,6 +11,15 @@
     <link rel="stylesheet" href="../stylesheets/custom.css">
     <link rel="stylesheet" href="../stylesheets/sunburst.css">
     <meta name="viewport" content="width=device-width">
+
+
+
+    <!-- timeonsitetracker -->
+    <script src="../javascripts/timeonsitetracker.js"></script>
+    <script src="../javascripts/tos_init.js"></script>
+
+
+
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -18,12 +27,18 @@
     <body>
         <div class="wrapper">
             <header>
-                <h1>TimeonsiteTracker (TOS)</h1>
+                <h1>TimeonsiteTracker (TOS) - Saving TOS to database</h1>
                 <p></p>
 
                 <p class="view"><a href="https://github.com/saleemkce/timeonsite">View the Project on GitHub <small>saleemkce/timeonsite</small></a></p>
 
                 <p><a href="index.html">v1.0.0</a></p>
+
+                <p>
+                    <a href="#NodeJs">NodeJs</a><br/>
+                    <a href="#PHP">PHP</a>
+                </p>
+
 
                 <ul>
                   <li><a href="https://github.com/saleemkce/timeonsite/zipball/master">Download <strong>ZIP File</strong></a></li>
@@ -37,13 +52,11 @@
 
                 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p> -->
 
-                <h3 id="examples">Saving TOS to database - Examples</h3>
+                <h3 id="examples">Saving TOS to database - Examples || Server-side data handling</h3>
 
-                <h3>Server-side data handling</h3>
-
-                <h3>Node.js example</h3>
+                <h3 id="NodeJs">Node.js example</h3>
 <pre class="prettyprint lang-js">
-//file 1: tos.model.js
+//file 1: tos.route.js
 var controller = require('tos.controller.js')
 
 module.exports = function(app) {
@@ -101,20 +114,19 @@ module.exports.SaveTos = function(req, res, next) {
     
 };
 </pre>
-<p>
-The example uses node's express framework to handle server-side data. We have three files here for saving data with node.js. A route file, a model file and a controller file.<br/><br/>
-* In route file, we create a route called "/tos" which is of POST method to accept data from incoming requests.
-<br/><br/>
-* In model file, we create new shema named "tos" which will save our TOS data. Since mongoDB is schema-free, we can save any number of fields in its collection. This is preferrable for collecting large number of custom data in TOS over RDBMS like MSSQL, MySql or Oracle.
-<br/><br/>
-* In controller file, we just check if there is data in "SaveTos" method. Then we load schema file and save our TOS data. By now, you might check your mongoDB collection to see if there is any data saved successfully.
-</p>
+                <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The example uses node's express framework to handle server-side data. We have three files here for saving data with node.js. A route file, a model file and a controller file.<br/><br/>
+                * In route file, we create a route named "/tos" which is of POST method to accept data from incoming requests.
+                <br/><br/>
+                * In model file, we create new shema named "tos" which will save our TOS data. Since mongoDB is schema-free, we can save any number of fields in its collection. This is preferrable for collecting large number of custom data in TOS over RDBMS like MSSQL, MySql or Oracle.
+                <br/><br/>
+                * In controller file, we just check if there is data in "SaveTos" method. Then we load schema file and save our TOS data. By now, you might check your mongoDB collection to see if there is any data saved successfully.
+                </p>
 
 
-<h3>PHP example</h3>
+                <h3 id="PHP">PHP example</h3>
 <pre class="prettyprint lang-sql">
-<xmp>
-// Create database named "test". Then, create table in any RDBMS (this example was checked in mysql DB)
+// Create database named "test". Then, create table in any RDBMS (this example was tested in mysql DB) as follows:
 
 CREATE TABLE tos(id INT AUTO_INCREMENT,
     tos_id INT,
@@ -130,8 +142,9 @@ CREATE TABLE tos(id INT AUTO_INCREMENT,
     realtime_tracking BOOLEAN NOT NULL DEFAULT 0,
     transferred_with VARCHAR(15) NULL,
     PRIMARY KEY ( id )) CHARACTER SET utf8 COLLATE utf8_general_ci
-
-
+</pre><br/>
+<pre class="prettyprint lang-php">
+<xmp>
 //In PHP, file: tos.php
 <?php
 if($_SERVER['REQUEST_METHOD'] == 'POST') {
@@ -164,15 +177,15 @@ if($_SERVER['REQUEST_METHOD'] == 'POST') {
         echo json_encode($res);
     }
 } else {
-    echo 'No data received!';
+    echo 'TOS data not received. Please check your endpoint URL and POST data from client-side!';
 }
 </xmp>
 </pre>
 
-<p>
-* We form the required SQL query for saving our data in MySql or any other RDBMS of your preference. Create a database named "test". Then execute the given query to create new table called "tos".<br/><br/>
-* Create a new file named "tos.php" which checks if there is any incoming request with POST data. In case of valid data, it saves the data to "tos" table in database we just created. Don't forget to restart your server (Apache, nginx etc.) that runs PHP.
-</p>
+                <p>
+                * We form the required SQL query for saving our data in MySql or any other RDBMS of your preference. Create a database named "test". Then execute the given query to create new table named "tos".<br/><br/>
+                * Create a new file named "tos.php" which checks if there is any incoming request with POST data. In case of valid data, it saves the data to "tos" table in database we just created. Don't forget to restart your server (Apache, nginx etc.) that runs PHP.
+                </p>
 
             </section>
             <footer>
@@ -182,15 +195,9 @@ if($_SERVER['REQUEST_METHOD'] == 'POST') {
         </div>
         <script src="../javascripts/scale.fix.js"></script>
         <script src="../javascripts/run_prettify.js"></script>
-        
     </body>
 </html>
 <!-- 
 html code conversion @
 http://www.web2generators.com/html-based-tools/online-html-entities-encoder-and-decoder 
 -->
-
-
-
-
-
