--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <link rel="stylesheet" href="stylesheets/custom.css">
     <link rel="stylesheet" href="stylesheets/sunburst.css">
     <meta name="viewport" content="width=device-width">
+
+
+    <!-- timeonsitetracker -->
+    <script src="javascripts/timeonsitetracker.js"></script>
+    <script src="javascripts/tos_init.js"></script>
+
+
+
+
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
