example for handling activity traccking in server-side created.

--- a/index.html
+++ b/index.html
@@ -182,6 +182,8 @@ Tos.getTimeOnPage();
             <td>It can be "tos" or "activity" which refers to either time on site tracking or activity tracking</td>
         </tr>
     </table>
+    <strong>* Note</strong>
+    <a href="v1/backend.html#PHP">Please check this example for data types to be used in various databases like Mongo, Oracle etc.</a>
 </p>
 
 <h3 id="TOS-configuration-option">TOS configuration option</h3>
@@ -519,7 +521,7 @@ var activityData = Tos.endActivity({}, manualProcess);
         <tr>
             <td>timeTakenTrackedBy</td>
             <td>String</td>
-            <td>second/millisecond</td>
+            <td>It denotes whether page is being tracked by "second" or "millisecond"</td>
         </tr>
         <tr>
             <td>activityStart</td>
@@ -542,6 +544,8 @@ var activityData = Tos.endActivity({}, manualProcess);
             <td>It can be "tos" or "activity" which refers to either time on site tracking or activity tracking</td>
         </tr>
     </table>
+    <strong>* Note</strong>
+    <a href="v1/backend.html#activity-tracking-PHP">Please check this example for data types to be used in various databases like Mongo, Oracle etc.</a>
 </p>
 
 <!--
