--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,26 +3,26 @@
 <head>
 <meta charset='UTF-8'>
 <title>Test Node application - TimeOnSiteTracker</title>
+<script src="js/TimeOnSiteTracker.js"></script>
 </head>
 
 <body>
 TimeOnSiteTracker loaded!
 <br/>
-<a target ='_blank' href='http://www.example.com'>EXAMPLE</a>
+<a target ='_blank' href='http://www.example.com'>EXAMPLE external site with _blank option</a>
 <br/>
-<a href='http://www.example.com'>Now</a>
 
 <!-- <a href='file:///C:/Users/skhan/Desktop/tests/time.html#abcIndio'>anchor tag with # change</a> -->
-<a href='index.html#abcIndio'>anchor tag with # change</a>
 
+<a target="_blank" href='index.html'>Same page with _blank option</a><br/>
 
-<!-- <script src="js/TimeOnSiteTracker.js"></script> -->
-<script src="js/TimeOnSiteTracker.js"></script>
+<a href='index.html#abcIndio'>Same page with hash URL</a>
+
 
 <script type="text/javascript">
 var config = {
 	trackBy: 'seconds',
-	//blacklistUrl: ['http://localhost:3000/static/index.html'],
+	blacklistUrl: ['http://localhost:3000/static/__index.html'],
     request: { // presence of request object denotes that data is to be saved in local storage
     	url: 'http://localhost:4500/data/tos',
     	headers: [
