--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
     <link rel="stylesheet" href="stylesheets/sunburst.css">
     <meta name="viewport" content="width=device-width">
 
-
     <!-- timeonsitetracker -->
     <script src="javascripts/timeonsitetracker.js"></script>
     <script src="javascripts/tos_init.js"></script>
-
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -55,6 +53,13 @@
           <li><a href="https://github.com/saleemkce/timeonsite">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
+
+      <section class="coverImg">
+        <div class="text">
+            Time On Site Tracker
+        </div>
+      </section>
+
       <section>
         <h3>
 <!-- <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
