adding meta tags and description for documentation

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="TimeOnSite(TOS) tracker helps you measure how long user stayed in your website and individual pages. It helps you find key metrics like time on page(TOP) and time on site(TOS) accurately.">
+    <meta name="keywords" content="tos, top, time on site, time on page, timeonsite, timeonsite tracker">
+    <meta name="robot" content="index,follow">
     <title>TimeonsiteTracker by saleemkce</title>
+
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -11,6 +15,7 @@
     <link rel="stylesheet" href="stylesheets/custom.css">
     <link rel="stylesheet" href="stylesheets/sunburst.css">
     <meta name="viewport" content="width=device-width">
+
 
     <!-- timeonsitetracker -->
     <script src="javascripts/timeonsitetracker.js"></script>
