--- a/v1/backend.html
+++ b/v1/backend.html
@@ -1,9 +1,13 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>TimeonsiteTracker (TOS) || Saving TOS to database</title>
+    <meta name="description" content="TOS backend examples, server-side examples, examples with NodeJs and PHP, TimeOnSite tracking examples">
+    <meta name="keywords" content="Saving TOS to database, backend examples, server-side examples">
+    <meta name="robot" content="index,follow">
+    <title>TimeonsiteTracker (TOS) - Saving TOS to database</title>
 
     <link rel="stylesheet" href="../stylesheets/styles.css">
     <link rel="stylesheet" href="../stylesheets/github-light.css">
@@ -11,7 +15,6 @@
     <link rel="stylesheet" href="../stylesheets/custom.css">
     <link rel="stylesheet" href="../stylesheets/sunburst.css">
     <meta name="viewport" content="width=device-width">
-
 
 
     <!-- timeonsitetracker -->
