Changed TimeOnSite Tracker file name case

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 </p>
 
 <h3 id="getting-started">Getting Started!</h3>
-<p>Include the <strong>TimeOnSiteTracker.min.js</strong> in your site, like</p>
+<p>Include the <strong>timeonsitetracker.min.js</strong> in your site, like</p>
 <pre class="prettyprint lang-js">
 &lt;head&gt; 
-    &lt;script src=&quot;TimeOnSiteTracker.min.js&quot;&gt;&lt;/script&gt; 
+    &lt;script src=&quot;timeonsitetracker.min.js&quot;&gt;&lt;/script&gt; 
 &lt;/head&gt;
 </pre>
 
@@ -196,7 +196,7 @@ Tos.getTimeOnPage();
 </p>
 
 <h3 id="TOS-configuration-option">TOS configuration option</h3>
-<p>When initializing TimeOnSiteTracker.js in your site, the first parameter requires a
+<p>When initializing timeonsitetracker.js in your site, the first parameter requires a
 "config" parameter which is optional and which controls the way TOS data is tracked.
 For example, look at the following option.
 <pre class="prettyprint lang-js">
