Added grunt tasks to minify and copy timeonsitetracker.js file

--- a/src/public/contact.html
+++ b/src/public/contact.html
@@ -15,7 +15,7 @@
 	<br/>
 
 	<p>Sample contact us page!</p>
-	<script src="js/TimeOnSiteTracker.js"></script>
+	<script src="js/timeonsitetracker.min.js"></script>
 
 
 </body>
