--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset='UTF-8'>
 <title>Test Node application - TimeOnSiteTracker</title>
-<script src="js/TimeOnSiteTracker.js"></script>
+<script src="js/timeonsitetracker.min.js"></script>
 </head>
 
 <body>
