--- a/src/public/about.html
+++ b/src/public/about.html
@@ -30,7 +30,7 @@ function clickCounter() {
 <div id="result"></div>
 <p>Click the button to see the counter increase.</p>
 <p>Close the browser tab (or window), and try again, and the counter is reset.</p>
-<script src="js/TimeOnSiteTracker.js"></script>
+<script src="js/timeonsitetracker.min.js"></script>
 
 </body>
 
